--- a/web/css/site.css
+++ b/web/css/site.css
@@ -89,3 +89,9 @@ a.desc:after {
     padding: 10px 20px;
     margin: 0 0 15px 0;
 }
+
+.spacer{
+    display: inline-block;
+    width: 1em;
+    /* height: 3em; */
+}
